--- a/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.html
+++ b/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.html
@@ -2,8 +2,33 @@
   <form [formGroup]="searchForm" class="sidebar__search">
     <input placeholder="Search" class="sidebar__search-input" type="text" />
   </form>
-  <div class="sidebar__list">
-    <div *ngFor="let chat of chats" class="sidebar__item">
+  <div class="sidebar__list desktop">
+    <div
+      *ngFor="let chat of chats"
+      class="sidebar__item"
+      (click)="onSelectChat(chat)"
+    >
+      <img class="sidebar__item-icon" [src]="chat.icon" alt="icon" />
+      <div class="sidebar__details">
+        <div class="sidebar__item-header">
+          <p class="sidebar__item-header-label">{{ chat.label }}</p>
+          <p class="sidebar__item-header-time">
+            {{ chat.lastMessage.sentAt | date : "HH:mm" }}
+          </p>
+        </div>
+        <div class="sidebar__item-body">
+          {{ chat.lastMessage.body }}
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="sidebar__list mobile">
+    <div
+      *ngFor="let chat of chats"
+      [routerLink]="[chat.id]"
+      class="sidebar__item"
+    >
       <img class="sidebar__item-icon" [src]="chat.icon" alt="icon" />
       <div class="sidebar__details">
         <div class="sidebar__item-header">
