--- a/frontend/src/app/teams/submodules/meetings/components/meetings-selected-dialog/meetings-selected-dialog.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/meetings-selected-dialog/meetings-selected-dialog.component.html
@@ -28,7 +28,12 @@
       </div>
     </div>
 
-    <button mat-stroked-button color="primary" class="selected-meeting__button">
+    <button
+      mat-stroked-button
+      color="primary"
+      class="selected-meeting__button"
+      (click)="onJoinMeetingClick()"
+    >
       Join meeting
     </button>
   </div>
