--- a/frontend/src/app/teams/submodules/meetings/pages/meeting-room/meeting-room.component.html
+++ b/frontend/src/app/teams/submodules/meetings/pages/meeting-room/meeting-room.component.html
@@ -2,10 +2,16 @@
   <div class="meeting-room__left">
     <div class="meeting-room__main">
       <div class="meeting-room__main-header">
-        <button class="meeting-room__main-header-back">
+        <!-- <button class="meeting-room__main-header-back">
           <mat-icon class="">navigate_before</mat-icon>
+        </button> -->
+        <h4 class="meeting-room__main-title">
+          Ever Weekly Meet, 15 June 2023
+          sadbnasdhadbasdhasdabdasbdbasdbasbdasbdasbbasdbasbdabd
+        </h4>
+        <button class="meeting-room__main-header-more">
+          <mat-icon class="">more_vert</mat-icon>
         </button>
-        <h4 class="meeting-room__main-title">Ever Weekly Meet, 15 June 2023</h4>
       </div>
 
       <div class="meeting-room__main-content">
