--- a/frontend/src/app/notes/components/notes-sidebar/notes-sidebar.component.scss
+++ b/frontend/src/app/notes/components/notes-sidebar/notes-sidebar.component.scss
@@ -23,6 +23,7 @@
   }
 
   @media (max-width: $md) {
+    padding: 0px;
     border-right: none;
     width: 100%;
   }
@@ -37,7 +38,11 @@
     padding: 0px 10px;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 12px;
+
+    @media (min-width: $md) {
+      gap: 8px;
+    }
 
     &.mobile {
       @media (min-width: $md) {
@@ -55,18 +60,35 @@
   }
 
   &__item {
+    position: relative;
     display: flex;
     gap: 0.8rem;
     padding: 12px 12px;
-    border-radius: 14px;
+    border-radius: 8px;
     cursor: pointer;
 
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -6px;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 1px;
+      background: #ebeaea;
+
+      @media (min-width: $md) {
+        display: none;
+      }
+    }
+
     &-active {
-      background: $primary-light;
+      background: $primary;
+      color: #ffffff;
     }
 
     &:hover {
-      background: #f5f5f5;
+      background: $primary-light;
     }
 
     &-icon {
