--- a/frontend/src/app/teams/components/navbar/navbar.component.scss
+++ b/frontend/src/app/teams/components/navbar/navbar.component.scss
@@ -1,5 +1,20 @@
 @import "vars";
 
+:host ::ng-deep {
+  .mat-mdc-tab-link-container {
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
+  .mat-mdc-tab-header-pagination-controls-enabled
+    .mat-mdc-tab-header-pagination {
+    display: none;
+  }
+}
+
 .wrapper {
   width: 100%;
   display: flex;
