--- a/frontend/src/app/teams/submodules/chats/pages/chats/chats.component.html
+++ b/frontend/src/app/teams/submodules/chats/pages/chats/chats.component.html
@@ -1,26 +1,22 @@
 <div class="chats-wrapper">
-  <app-chats-sidebar></app-chats-sidebar>
-  <main class="chats__content">
-    <div class="chats__navbar">
-      <h3 class="chats__navbar-header">Monopolist</h3>
-      <p class="chats__navbar-details">23 members</p>
-    </div>
+  <app-chats-sidebar
+    (selectedChatId)="onSelectChat($event)"
+  ></app-chats-sidebar>
 
-    <div class="chats__messages">
-      <app-chats-message
-        *ngFor="let message of messages; let i = index"
-        [message]="message"
-        [prevMessage]="messages[i - 1]"
-      ></app-chats-message>
-    </div>
-
-    <div class="chats__tabbar">
-      <div class="chats__tabbar-wrapper">
-        <input type="text" class="chats__tabbar-input" placeholder="Message" />
-        <button type="button" class="chats__tabbar-send">
-          <mat-icon>send</mat-icon>
-        </button>
-      </div>
-    </div>
-  </main>
+  <div class="chat-container">
+    <!-- <ng-container
+      *ngIf="selectedChatId$ | async as selectedChatId; else emptyChat"
+    >
+      <app-chat-room [chatId]="selectedChatId"></app-chat-room>
+    </ng-container> -->
+    <ng-container *ngIf="selectedChatId; else emptyChat">
+      <app-chat-room [chatId]="selectedChatId"></app-chat-room>
+    </ng-container>
+  </div>
 </div>
+
+<ng-template #emptyChat>
+  <div class="empty-chat__wrapper">
+    <p class="empty-chat__label">Select chat</p>
+  </div>
+</ng-template>
