Adjusted UI for tasks pages

--- a/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.scss
@@ -44,7 +44,7 @@
   border-right: 2px solid #f2f2f2;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  background: #f6f8f9;
+  background: #ffffff;
 
   &::-webkit-scrollbar {
     display: none;
