--- a/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
@@ -17,6 +17,7 @@
   border-right: 2px solid #f2f2f2;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  background: #ffffff;
 
   @media (max-width: $sm) {
     display: none;
