--- a/frontend/src/app/layouts/primary-layout/primary-layout.component.scss
+++ b/frontend/src/app/layouts/primary-layout/primary-layout.component.scss
@@ -8,7 +8,7 @@
   font-size: $text-sm;
   color: black;
   position: relative;
-  background: #F8F9FB;
+  background: #f8f9fb;
 }
 
 .content__wrapper {
