--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -30,6 +30,26 @@ html {
   padding: 0px;
   margin: 0px;
   border: none;
+
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  &::-webkit-scrollbar-track-piece {
+    background-color: #fff;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #cbcbcb;
+    outline: 2px solid #fff;
+    outline-offset: -2px;
+    border-radius: 4px;
+    border: 0.1px solid #b7b7b7;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #909090;
+  }
 }
 
 *,
@@ -174,5 +194,13 @@ textarea {
   h5,
   h6 {
     margin: 0;
+  }
+
+  .mat-mdc-menu-content {
+    padding: 0px;
+  }
+
+  .page {
+    padding: 22px;
   }
 }
