--- a/frontend/src/app/teams/submodules/tasks/components/kanban-column/kanban-column.component.scss
+++ b/frontend/src/app/teams/submodules/tasks/components/kanban-column/kanban-column.component.scss
@@ -1,3 +1,5 @@
+@import "vars";
+
 .column {
   display: flex;
   flex-direction: column;
@@ -5,29 +7,72 @@
   height: calc(100vh - 250px);
 
   width: 100%;
-  width: 340px;
+  width: 280px;
 
   border-radius: 6px;
-  border: 1px solid #e5e6eb;
-  // background: #ffffff;
-}
 
-.column-title {
-  background: #ffffff;
-  font-size: 16px;
-  padding: 1rem;
-  font-weight: 600;
-  border-radius: 6px 6px 0px 0px;
-  border-bottom: 2px solid #263fb9;
+  &__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
+    padding: 0.8rem 1rem;
+    background: #ffffff;
+    border-bottom: 2px solid #263fb9;
+    border: 1px solid #e9e9e9;
 
-  // text-transform: uppercase;
-  // border-radius: 10px;
+    border-radius: 6px 6px 0px 0px;
+    transition: all 0.5s ease;
+
+    &:hover &-toolbar {
+      visibility: visible;
+      transition: all 0.5s ease;
+    }
+
+    &-title {
+      font-size: 14px;
+      font-weight: 600;
+    }
+
+    &-toolbar {
+      visibility: hidden;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+
+      @media (max-width: $sm) {
+        visibility: visible;
+      }
+
+      & button {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        background: #f0f0f0c0;
+        padding: 4px 6px;
+        border-radius: 4px;
+
+        & mat-icon {
+          font-size: 16px;
+          width: 16px;
+          height: 16px;
+        }
+
+        & p {
+          font-size: 12px;
+        }
+      }
+    }
+  }
 }
 
 .tasks-container {
+  display: flex;
+  flex-direction: column;
   flex-grow: 1;
   overflow-y: auto;
-  padding: 12px 12px;
+  padding: 12px 0px;
+  gap: 12px;
 }
 
 .cdk-drag-preview {
