--- a/frontend/src/app/teams/submodules/tasks/components/kanban-item/kanban-item.component.scss
+++ b/frontend/src/app/teams/submodules/tasks/components/kanban-item/kanban-item.component.scss
@@ -1,17 +1,131 @@
+@import "vars";
+
 .task {
-  cursor: pointer;
-  display: flex;
-  padding: 1rem;
-  margin-bottom: 15px;
-  background: #ffffff;
-  border: 1px solid #e5e6eb;
+  padding: 12px 0px;
   border-radius: 6px;
+  background: #ffffff;
+  border: 1px solid #e9e9e9;
+
+  &__header {
+    padding: 0 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+
+    &-title {
+      font-size: 16px;
+      font-weight: 500;
+    }
+
+    &-more {
+      & mat-icon {
+        font-size: 22px;
+        width: 22px;
+        height: 22px;
+      }
+    }
+  }
+
+  &__description {
+    padding: 0 16px;
+    margin-top: 8px;
+
+    & p {
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      font-size: 12px;
+      color: #575757;
+    }
+  }
+
+  &__tags {
+    padding: 0 16px;
+    margin-top: 12px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    flex-wrap: wrap;
+
+    &-item {
+      font-size: 10px;
+      font-weight: 500;
+      padding: 2px 6px;
+      background: #d5e5f7;
+      border-radius: 4px;
+    }
+  }
+
+  &__dates {
+    padding: 0 16px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-top: 12px;
+
+    &-icon {
+      font-weight: 500;
+      width: 16px;
+      height: 16px;
+      font-size: 16px;
+    }
+
+    & p {
+      font-size: 12px;
+      font-weight: 500;
+    }
+  }
+
+  &__footer {
+    padding: 12px 16px 0px;
+    margin-top: 12px;
+    border-top: 1px solid #e9e9e9;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &-executor {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+
+      &-icon {
+        width: 16px;
+        height: 16px;
+        font-size: 16px;
+      }
+
+      & p {
+        font-size: 12px;
+      }
+    }
+
+    &-comments {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+
+      &-icon {
+        width: 14px;
+        height: 14px;
+        font-size: 14px;
+      }
+
+      & p {
+        font-size: 12px;
+      }
+    }
+  }
 }
 
 .cdk-drag-preview {
-  background: #f8f8f8;
-  box-sizing: border-box;
-  border-radius: 4px;
+  padding: 12px 0px;
+  border-radius: 10px;
+  background: #ffffff;
+  border: 1px solid #e9e9e9;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
     0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
