--- a/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
@@ -41,7 +41,7 @@
       margin-top: 26px;
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 6px;
     }
 
     &-item {
@@ -49,7 +49,7 @@
       align-items: center;
       cursor: pointer;
       gap: 12px;
-      color: #4f5258;
+      color: #838992;
       padding: 10px 20px;
       border-radius: 8px;
 
@@ -62,13 +62,13 @@
       }
 
       &-active {
-        color: #ffff;
-        background: $primary;
+        color: $primary;
+        background: #e8eff8;
         font-weight: 500;
 
         &:hover {
-          color: #ffff;
-          background: $primary-light;
+          color: $primary;
+          background: #eef3fa;
         }
       }
 
