--- a/frontend/src/app/notes/pages/notes/notes.component.scss
+++ b/frontend/src/app/notes/pages/notes/notes.component.scss
@@ -1,9 +1,36 @@
 @import "vars";
 
+:host ::ng-deep {
+  .ck-content ol {
+    padding-left: 40px;
+  }
+
+  .ck-editor__editable_inline {
+    height: calc(100vh - 210px);
+  }
+
+  .ck.ck-editor__main {
+    padding: 22px;
+  }
+
+  .ck-toolbar {
+    padding: 12px 22px;
+    border: none;
+  }
+
+  .ck-editor__top {
+  }
+
+  .ck.ck-editor__main > .ck-editor__editable:not(.ck-focused) {
+    border: none;
+  }
+}
+
 .notes-wrapper {
-  display: flex;
+  display: grid;
   height: calc(100vh - 70px);
   border-top: 2px solid #f2f2f2;
+  grid-template-columns: repeat(4, minmax(0px, 1fr));
 
   @media (max-width: $md) {
     padding-top: 0;
@@ -12,100 +39,13 @@
   }
 }
 
-:host ::ng-deep {
-  .ck-editor__editable_inline {
-    min-height: calc(100vh - 200px);
-  }
-
-  .ck.ck-editor__main {
-    padding: 0 22px;
-  }
-
-  .ck-toolbar {
-    border: none;
-    padding: 12px 22px;
-    border-top: 2px solid #f2f2f2;
-  }
-  .ck-editor__top {
-    margin-bottom: 22px;
-  }
+app-notes-sidebar {
+  grid-column: span 1 / span 1;
 }
 
 .notes {
   &__content {
-    position: relative;
-    flex: 1 1 auto;
-    background: #f6f9fa;
-    display: none;
-
-    @media (min-width: $md) {
-      display: block;
-    }
-  }
-
-  &__navbar {
-    padding: 14px 22px;
-    border-bottom: 2px solid #f2f2f2;
-
-    &-header {
-      font-size: 16px;
-      font-weight: 700;
-    }
-
-    &-details {
-      margin-top: 4px;
-      font-size: 12px;
-      color: #7a7a7a;
-    }
-  }
-
-  &__messages {
-    width: 100%;
-    height: calc(100vh - 260px);
-    overflow-y: auto;
-    background: #f6f8f9;
-    padding: 22px;
-    display: flex;
-    flex-direction: column;
-    gap: 22px;
-
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-
-    @media (max-width: $md) {
-      height: calc(100vh - 200px);
-    }
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  }
-
-  &__tabbar {
-    background: #ffffff;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 14px 22px;
-
-    &-wrapper {
-      display: flex;
-      align-items: center;
-      gap: 22px;
-    }
-
-    &-input {
-      width: 100%;
-      padding: 10px 16px;
-      background: #f8f8f8;
-      border: 1px solid #f2f2f2;
-      border-radius: 10px;
-    }
-
-    &-send tui-svg:hover {
-      color: $primary;
-    }
+    grid-column: span 3 / span 3;
   }
 }
 
