--- a/frontend/src/app/teams/submodules/chats/pages/chat/chat.component.html
+++ b/frontend/src/app/teams/submodules/chats/pages/chat/chat.component.html
@@ -1,3 +1,5 @@
 <main class="chat">
-  <app-chat-room [includeBackButton]="true" [chatId]="chatId"></app-chat-room>
+  <ng-container *ngIf="chatId">
+    <app-chat-room [includeBackButton]="true" [chatId]="chatId"></app-chat-room>
+  </ng-container>
 </main>
