--- a/frontend/src/app/teams/submodules/meetings/components/meetings-selected-dialog/meetings-selected-dialog.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/meetings-selected-dialog/meetings-selected-dialog.component.html
@@ -1,8 +1,7 @@
 <ng-container *ngIf="selectedMeeting">
-  <div class="selected-meeting-card">
+  <div mat-dialog-content class="selected-meeting-card">
     <div class="selected-meeting-header">
-      <h4 class="selected-meeting-title">{{ selectedMeeting.title }}</h4>
-      <p class="selected-meeting-status">{{ selectedMeeting.status }}</p>
+      <p class="selected-meeting-title">{{ selectedMeeting.title }}</p>
     </div>
 
     <div class="selected-meeting-detail-list">
@@ -10,6 +9,13 @@
         <p class="selected-meeting-detail-label">Description</p>
         <p class="selected-meeting-detail-desc">
           {{ selectedMeeting.description }}
+        </p>
+      </div>
+
+      <div class="selected-meeting-detail">
+        <p class="selected-meeting-detail-label">Status</p>
+        <p class="selected-meeting-detail-desc">
+          {{ selectedMeeting.status }}
         </p>
       </div>
 
@@ -29,7 +35,7 @@
     </div>
 
     <button
-      mat-stroked-button
+      mat-flat-button
       color="primary"
       class="selected-meeting__button"
       (click)="onJoinMeetingClick()"
