--- a/frontend/src/app/teams/submodules/meetings/pages/meeting-room/meeting-room.component.scss
+++ b/frontend/src/app/teams/submodules/meetings/pages/meeting-room/meeting-room.component.scss
@@ -1,6 +1,7 @@
 @import "vars";
 
 .meeting-room {
+  position: relative;
   padding: 0px;
   display: grid;
   grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -67,6 +68,7 @@
     height: 100%;
     background: #ffffff;
     border-radius: 8px;
+    position: relative;
 
     &-header {
       display: flex;
@@ -160,6 +162,7 @@
     }
 
     &-toolbar {
+      background: #fff;
       position: fixed;
       width: 100%;
       bottom: 24px;
@@ -169,43 +172,53 @@
       display: flex;
       align-items: center;
       gap: 8px;
-      justify-content: space-between;
+      justify-content: center;
       padding: 0 16px;
       margin-top: 14px;
 
-      @media (min-width: $lg) {
+      @media (min-width: $md) {
         position: static;
-        width: 100%;
-        bottom: 12px;
-        left: 0;
-        right: 0;
       }
 
       &-buttons {
         display: flex;
         align-items: center;
-        gap: 12px;
+        gap: 14px;
       }
 
       &-button {
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 6px;
+        padding: 8px;
         border-radius: 4px;
-        background: #e9e9e9;
-        color: #383838;
-      }
+        border: 1px solid #e9e9e9;
+        color: #5e5e5e;
 
-      &-leave {
-        color: #e44949;
-        background: #e0515133;
-        padding: 4px 12px 4px 4px;
-        border-radius: 6px;
-        display: flex;
-        align-items: center;
-        gap: 4px;
+        & mat-icon {
+          font-size: 24px;
+          width: 24px;
+          height: 24px;
+        }
+
+        &.active {
+          background: #4c82ff1f;
+          color: $primary;
+        }
+
+        &.leave {
+          color: #e44949;
+          background: #e0515133;
+        }
       }
+    }
+  }
+}
+
+.more-menu {
+  &__button {
+    &.leave {
+      color: #e44949;
     }
   }
 }
