--- a/frontend/src/app/teams/submodules/tasks/pages/task-view/task-view.component.scss
+++ b/frontend/src/app/teams/submodules/tasks/pages/task-view/task-view.component.scss
@@ -1,7 +1,7 @@
 .vtask {
   &__wrapper {
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     gap: 22px;
   }
 
@@ -25,8 +25,8 @@
     padding: 22px;
 
     &-title {
-        font-size: 16px;
-        font-weight: 500;
+      font-size: 16px;
+      font-weight: 500;
     }
   }
 
