--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,9 +3,6 @@
 // FONTS
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sarpanch:wght@400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 // SHARED STYLES
 @import "container";
@@ -16,7 +13,6 @@
 @include mat.core();
 @include mat.all-component-themes($kaiteki-frontend-theme);
 @include mat.button-typography($kaiteki-frontend-typography);
-@include mat.all-component-themes($kaiteki-frontend-theme);
 @include mat.typography-hierarchy($kaiteki-frontend-typography);
 
 // CSS NULLER
@@ -32,18 +28,29 @@ html {
   border: none;
 
   &::-webkit-scrollbar {
-    width: 12px;
+    width: 10px;
+    height: 10px;
+  }
+
+  &:active::-webkit-scrollbar-thumb,
+  &:focus::-webkit-scrollbar-thumb,
+  &:hover::-webkit-scrollbar-thumb {
+    visibility: visible;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    visibility: hidden;
   }
 
   &::-webkit-scrollbar-track-piece {
-    background-color: #fff;
+    background-color: transparent;
   }
 
   &::-webkit-scrollbar-thumb {
     background-color: #cbcbcb;
     outline: 2px solid #fff;
     outline-offset: -2px;
-    border-radius: 4px;
+    border-radius: 6px;
     border: 0.1px solid #b7b7b7;
   }
 
@@ -202,5 +209,28 @@ textarea {
 
   .page {
     padding: 22px;
+
+    @media (max-width: $sm) {
+      padding: 16px 8px;
+    }
+  }
+
+  .mat-mdc-dialog-container .mdc-dialog__surface {
+    border-radius: 8px;
+  }
+
+  .mat-accordion .mat-expansion-panel:not(.mat-expanded),
+  .mat-accordion .mat-expansion-panel:not(.mat-expansion-panel-spacing) {
+    border-radius: 6px;
+  }
+
+  .mat-expansion-panel:not([class*="mat-elevation-z"]) {
+    box-shadow: none;
+    border: 1px solid #e9e9e9;
+  }
+
+  .mat-elevation-z8,
+  .mat-mdc-elevation-specific.mat-elevation-z8 {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
 }
