--- a/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
       </mat-icon>
     </div>
 
-    <button *ngIf="collapsed" (click)="toggleSidebar()" class="toggle">
+    <button *ngIf="collapsed" (click)="toggleSidebar()" class="toggle-button">
       <mat-icon class="toggle-icon">keyboard_double_arrow_right</mat-icon>
     </button>
 
