--- a/frontend/src/assets/styles/_theme.scss
+++ b/frontend/src/assets/styles/_theme.scss
@@ -11,12 +11,9 @@ $kaiteki-frontend-accent: mat.define-palette(
 $kaiteki-frontend-warn: mat.define-palette(mat.$red-palette);
 $kaiteki-frontend-typography: mat.define-typography-config(
   $font-family: "Poppins, sans-serif",
-  $headline-1:
-    mat.define-typography-level(112px, 112px, 300, $letter-spacing: -0.05em),
-  $headline-2:
-    mat.define-typography-level(56px, 56px, 400, $letter-spacing: -0.02em),
-  $headline-3:
-    mat.define-typography-level(45px, 48px, 400, $letter-spacing: -0.005em),
+  $headline-1: mat.define-typography-level(112px, 112px, 300),
+  $headline-2: mat.define-typography-level(56px, 56px, 400),
+  $headline-3: mat.define-typography-level(45px, 48px, 400),
   $headline-4: mat.define-typography-level(34px, 40px, 400),
   $headline-5: mat.define-typography-level(24px, 32px, 400),
   $headline-6: mat.define-typography-level(20px, 32px, 400),
