--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,195 +3,18 @@
 // FONTS
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sarpanch:wght@400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 // SHARED STYLES
 @import "container";
 @import "./assets/styles/_mixins.scss";
 @import "./assets/styles/_vars.scss";
 @import "./assets/styles/_theme.scss";
+@import "./assets/styles/_nuller.scss";
 
 @include mat.core();
 @include mat.all-component-themes($kaiteki-frontend-theme);
 @include mat.button-typography($kaiteki-frontend-typography);
 @include mat.typography-hierarchy($kaiteki-frontend-typography);
-
-// CSS NULLER
-body,
-html {
-  margin: 0;
-  height: 100%;
-}
-
-* {
-  padding: 0px;
-  margin: 0px;
-  border: none;
-
-  &::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-  }
-
-  &:active::-webkit-scrollbar-thumb,
-  &:focus::-webkit-scrollbar-thumb,
-  &:hover::-webkit-scrollbar-thumb {
-    visibility: visible;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    visibility: hidden;
-  }
-
-  &::-webkit-scrollbar-track-piece {
-    background-color: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: #cbcbcb;
-    outline: 2px solid #fff;
-    outline-offset: -2px;
-    border-radius: 6px;
-    border: 0.1px solid #b7b7b7;
-  }
-
-  &::-webkit-scrollbar-thumb:hover {
-    background-color: #909090;
-  }
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-/* Links */
-
-a,
-a:link,
-a:visited {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-/* Common */
-
-aside,
-nav,
-footer,
-header,
-section,
-main {
-  display: block;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  font-size: inherit;
-  font-weight: inherit;
-}
-
-ul,
-ul li {
-  list-style: none;
-}
-
-img {
-  vertical-align: top;
-  height: auto;
-}
-
-img,
-svg {
-  max-width: 100%;
-}
-
-address {
-  font-style: normal;
-}
-
-/* Form */
-
-input,
-textarea,
-button,
-select {
-  font-family: inherit;
-  font-size: inherit;
-  color: inherit;
-  background-color: transparent;
-}
-
-input::-ms-clear {
-  display: none;
-}
-
-button,
-input[type="submit"] {
-  display: inline-block;
-  box-shadow: none;
-  background-color: transparent;
-  background: none;
-  cursor: pointer;
-}
-
-input:focus,
-input:active,
-button:focus,
-button:active {
-  outline: none;
-}
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-label {
-  cursor: pointer;
-}
-
-legend {
-  display: block;
-}
-
-@media (prefers-reduced-motion: reduce) {
-  * {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
-}
-
-input[type="color"],
-input[type="date"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="email"],
-input[type="month"],
-input[type="number"],
-input[type="password"],
-input[type="search"],
-input[type="tel"],
-input[type="text"],
-input[type="time"],
-input[type="url"],
-input[type="week"],
-select:focus,
-textarea {
-  font-size: 14px;
-}
 
 :root {
   .mat-typography p,
